1.2.8:
Philippe Simons - Sat Jul 14 20:33:17 PDT 2007
 * Added support for Ogg Vorbis playback with Tremor (an integer decoder)
Sam Lantinga - Sat Jul 14 07:02:09 PDT 2007
 * Fixed memory corruption in timidity resampling code
Ryan Gordan - Tue Jul 3 10:44:29 2007 UTC
 * Fixed building SDL_mixer with SDL 1.3 pre-release
Ryan Gordan - Tue Feb 13 08:11:54 2007 UTC
 * Fixed compiling both timidity and native midi in the same build
Hans de Goede - Sun Aug 20 23:25:46 2006 UTC
 * Added volume control to playmus
Jonathan Atkins - Thu Aug 10 15:06:40 2006 UTC
 * Fixed linking with system libmikmod
David Ergo - Fri Jun 23 09:07:19 2006 UTC
 * Corrected no-op conditions in SetDistance(), SetPanning() and SetPosition()
 * Fixed copy/paste errors in channel amplitudes

1.2.7:
Sam Lantinga - Fri May 12 00:04:32 PDT 2006
 * Added support for dynamically loading SMPEG library
Sam Lantinga - Thu May 11 22:22:43 PDT 2006
 * Added support for dynamically loading Ogg Vorbis library
Sam Lantinga - Sun Apr 30 09:01:44 PDT 2006
 * Removed automake dependency, to allow Universal binaries on Mac OS X
 * Added gcc-fat.sh for generating Universal binaries on Mac OS X
Sam Lantinga - Sun Apr 30 01:48:40 PDT 2006
 * Updated libtool support to version 1.5.22
Patrice Mandin - Sat Jul 16 16:43:24 UTC 2005
 * Use SDL_RWops also for native midi mac and win32
Patrice Mandin - Sat Jul 9 14:40:09 UTC 2005
 * Use SDL_RWops also for native midi gpl (todo: mac and win32)
Ryan C. Gordon - Sat Jul  9 01:54:03 EDT 2005
 * Tweaked Mix_Chunk's definition to make predeclaration easier.
Patrice Mandin - Mon Jul 4 19:45:40 UTC 2005
 * Search timidity.cfg also in /etc
 * Fix memory leaks in timidity player
 * Use also SDL_RWops to read midifiles for timidity
Ryan C. Gordon - Mon Jun 13 18:18:12 EDT 2005
 * Patch from Eric Wing to fix native midi compiling on MacOS/x86.
Sam Lantinga - Wed Dec 22 17:14:32 PST 2004
 * Disabled support for the system version of libmikmod by default